--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "@nguniversal/express-engine": "^8.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^8.0.0",
     "moment": "^2.29.1",
+    "ngx-device-detector": "^2.0.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
