--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -17,6 +17,7 @@ ext {
     lombokVersion = '1.18.16'
     mongockVersion = '4.1.19'
     openApiUiVersion = '1.5.3'
+    modelMapperVersion = '2.3.9'
 }
 
 dependencyManagement {
@@ -35,7 +36,7 @@ dependencies {
     implementation 'com.github.cloudyrock.mongock:mongock-spring-v5'
     implementation 'com.github.cloudyrock.mongock:mongodb-springdata-v3-driver'
 
-
+    implementation "org.modelmapper:modelmapper:${modelMapperVersion}"
     implementation "org.springdoc:springdoc-openapi-ui:${openApiUiVersion}"
 
     implementation "io.jsonwebtoken:jjwt:${jsonWebTokenVersion}"
