edit token live in server, reg and log done, add handler error service, edit auth guard and auth service

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -14,5 +14,5 @@ mongock:
 
 jwt:
   secret: dev-secret
-  refreshTokenExpirationInMs: 1209600000
-  accessTokenExpirationInMs: 1209600000
+  refreshTokenExpirationInMs: 300000
+  accessTokenExpirationInMs: 60000
