up 11 angular, del nestjs, change server.ts, to do ssrRedirect301,fx ssr redirect and route lang when log out and token false

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,73 +1,61 @@
 {
-  "name": "angular-nestjs-starter",
-  "version": "0.0.0",
+  "name": "angular-starter",
+  "version": "11.0.3",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4200",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "ssr:serve": "nodemon --watch src/ -e ts,html,scss --exec npm run serve",
-    "serve": "node serve-script",
-    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
-    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
-    "build:client-and-server-bundles": "ng build --prod && ng run angular-nestjs-starter:server:production",
-    "dev:ssr": "ng run universal-starter-v9:serve-ssr",
-    "prebuild:ssr": "ngcc",
-    "prerender": "ng run universal-starter-v9:prerender"
+    "dev:ssr": "ng run angular-starter:serve-ssr",
+    "serve:ssr": "node dist/server/main.js",
+    "build:ssr": "ng build --prod && ng run angular-starter:server:production",
+    "prerender": "ng run angular-starter:prerender"
   },
+  "license": "ISC",
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.6",
-    "@angular/cdk": "^10.2.7",
-    "@angular/common": "~10.0.6",
-    "@angular/compiler": "~10.0.6",
-    "@angular/core": "~10.0.6",
-    "@angular/forms": "~10.0.6",
-    "@angular/material": "^10.2.7",
-    "@angular/material-moment-adapter": "^11.1.0",
-    "@angular/platform-browser": "~10.0.6",
-    "@angular/platform-browser-dynamic": "~10.0.6",
-    "@angular/platform-server": "~10.0.6",
-    "@angular/router": "~10.0.6",
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
-    "@nestjs/ng-universal": "^2.0.1",
-    "@nestjs/platform-express": "^6.0.0",
-    "@nguniversal/common": "^10.0.1",
-    "@nguniversal/express-engine": "^8.0.0",
-    "@nguniversal/module-map-ngfactory-loader": "^8.0.0",
+    "@angular/animations": "11.0.3",
+    "@angular/cdk": "^11.1.1",
+    "@angular/common": "11.0.3",
+    "@angular/compiler": "11.0.3",
+    "@angular/core": "11.0.3",
+    "@angular/forms": "11.0.3",
+    "@angular/material": "^11.1.1",
+    "@angular/material-moment-adapter": "^11.1.1",
+    "@angular/platform-browser": "11.0.3",
+    "@angular/platform-browser-dynamic": "11.0.3",
+    "@angular/platform-server": "11.0.3",
+    "@angular/router": "11.0.3",
+    "@nguniversal/express-engine": "11.0.1",
+    "cors": "^2.8.5",
+    "express": "4.17.1",
     "moment": "^2.29.1",
     "ngx-device-detector": "^2.0.5",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "rxjs": "6.6.3",
+    "tslib": "2.0.3",
+    "zone.js": "0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.5",
-    "@angular/cli": "~10.0.5",
-    "@angular/compiler-cli": "~10.0.6",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "nodemon": "^1.18.11",
-    "protractor": "~7.0.0",
-    "rimraf": "^2.6.3",
-    "ts-loader": "^5.2.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5",
-    "wait-on": "^3.2.0",
-    "webpack-cli": "^3.1.0"
+    "@angular-devkit/build-angular": "0.1100.3",
+    "@angular/cli": "11.0.3",
+    "@angular/compiler-cli": "11.0.3",
+    "@nguniversal/builders": "11.0.1",
+    "@types/express": "4.17.9",
+    "@types/jasmine": "3.6.2",
+    "@types/node": "14.14.10",
+    "codelyzer": "6.0.1",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "6.0.0",
+    "karma": "5.2.3",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage": "2.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.5.4",
+    "protractor": "7.0.0",
+    "ts-node": "9.1.0",
+    "tslint": "6.1.3",
+    "typescript": "4.0.5"
   }
 }
