--- a/frontend/tsconfig.server.json
+++ b/frontend/tsconfig.server.json
@@ -9,10 +9,10 @@
     ]
   },
   "files": [
-    "src/main.server.ts"
+    "src/main.server.ts",
+    "server.ts"
   ],
   "angularCompilerOptions": {
-    "enableIvy": false,
     "entryModule": "./src/app/app.server.module#AppServerModule"
   }
 }
