--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "11.0.3",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4200",
+    "start": "ng serve --open",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -28,6 +28,8 @@
     "@angular/platform-browser-dynamic": "11.0.3",
     "@angular/platform-server": "11.0.3",
     "@angular/router": "11.0.3",
+    "@ngrx/effects": "^10.1.2",
+    "@ngrx/store": "^10.1.2",
     "@nguniversal/express-engine": "11.0.1",
     "cors": "^2.8.5",
     "express": "4.17.1",
