--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'java'
     id 'checkstyle'
     id 'jacoco'
+    id 'org.sonarqube' version '3.1.1'
 }
 
 group 'com.trip.companion'
@@ -92,3 +93,11 @@ jacocoTestReport {
 }
 
 check.dependsOn jacocoTestReport
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "trip-companion_app"
+        property "sonar.organization", "trip-companion"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
