--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
     implementation 'com.github.cloudyrock.mongock:mongock-spring-v5'
     implementation 'com.github.cloudyrock.mongock:mongodb-springdata-v3-driver'
+    testImplementation 'com.github.cloudyrock.mongock:mongock-standalone'
 
     implementation "org.modelmapper:modelmapper:${modelMapperVersion}"
     implementation "com.google.code.gson:gson:${gsonVersion}"
