--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
       database: trip-companion
       port: 27017
 
+mongock:
+  changeLogsScanPackage:
+    - com.trip.companion.repository.migration
+
 jwt:
   secret: ${random.uuid}
   refreshTokenExpirationInMs: 1209600000
