--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
 name: Project CI
 
 on:
@@ -9,20 +6,43 @@ on:
   pull_request:
     branches: [ master ]
 
-defaults:
-  run:
-    working-directory: backend
-
 jobs:
   label:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/labeler@v2
         with:
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           sync-labels: true
-  build:
+  frontendBuild:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Setup Node.js 14
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14.x
+    - name: Cache node modules
+      uses: actions/cache@v2
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+    - name: Build with Node
+      run: |
+        npm install
+        npm run lint
+        npm run build:ssr
+  backendBuild:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
     steps:
     - name: Checkout
       uses: actions/checkout@v1
@@ -31,7 +51,7 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         checkstyle_config: backend/checkstyle.xml
-        tool_name: 'checkstyle'
+        tool_name: checkstyle
         level: error
         fail_on_error: true
         workdir: backend/src/main
@@ -69,8 +89,8 @@ jobs:
         username: ubuntu
         server: ${{ secrets.AWS_DEV_SERVER_IP }}
         ssh_private_key: ${{ secrets.AWS_DEV_SSH_PRIVATE_KEY }}
-        local_path: ./backend/build/libs/backend-0.0.1.jar
-        remote_path: /home/ubuntu/backend-0.0.1.jar
+        local_path: ./backend/build/libs/backend*.jar
+        remote_path: /home/ubuntu
     - name: Restart service on AWS
       uses: appleboy/ssh-action@master
       with:
@@ -78,5 +98,5 @@ jobs:
         username: ubuntu
         key: ${{ secrets.AWS_DEV_SSH_PRIVATE_KEY }}
         script: |
-          mv /home/ubuntu/backend-0.0.1.jar /opt/trip-companion/backend-0.0.1.jar
+          mv /home/ubuntu/backend*.jar /opt/trip-companion/
           sudo service trip-companion restart
