--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 9000
 
 spring:
+  http:
+    multipart:
+      max-file-size: 5MB
   data:
     mongodb:
       database: trip-companion
