Extended User entity, added possibility for updating user

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -13,5 +13,5 @@ mongock:
 
 jwt:
   secret: dev-secret
-  refreshTokenExpirationInMs: 300000
-  accessTokenExpirationInMs: 60000
+  refreshTokenExpirationInMs: 1_209_600_000
+  accessTokenExpirationInMs: 900_000
