--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -37,6 +37,8 @@ jobs:
       run: |
         npm install
         npm run lint
+        npm run test
+        npm run update-sitemap
         npm run build:ssr
   backendBuild:
     runs-on: ubuntu-latest
