--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -71,7 +71,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "app",
+            "prefix": "",
             "style": "kebab-case"
           }
         ],
