global edit for front, dir for node server with mvc

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -2,7 +2,9 @@
   "root": true,
   "ignorePatterns": [
     "projects/**/*",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "server.ts",
+    "server/**"
   ],
   "overrides": [
     {
@@ -23,6 +25,7 @@
       ],
       "rules": {
         "no-var": "error",
+        "no-underscore-dangle": "off",
         "no-multi-spaces": "error",
         "space-in-parens": "error",
         "no-multiple-empty-lines": "error",
