--- a/frontend/tsconfig.server.json
+++ b/frontend/tsconfig.server.json
@@ -10,7 +10,7 @@
   },
   "files": [
     "src/main.server.ts",
-    "server.ts"
+    "server/server.ts"
   ],
   "angularCompilerOptions": {
     "entryModule": "./src/app/app.server.module#AppServerModule"
